--- a/view/community/storyDetail.html
+++ b/view/community/storyDetail.html
@@ -170,7 +170,7 @@
         }
         #likeBtn i{color: red;}
         #likeBtn.active i{animation: animateHeart .3s;}
-        svg{
+        #likeBtn svg{
             position: absolute;
             width: 60px;
             height: 60px;
@@ -233,7 +233,22 @@
                     <div class="col"><span id="cardContent"></span></div>
                 </div>
                 <div class="row" style="margin-top: 7px;margin-bottom: 15px;">
-                    <div class="col"><button id="likeBtn" class="btn" type="button"></button></div>
+                    <div class="col"><button id="likeBtn" class="btn" type="button">
+                        <div>
+                            <i class="far fa-heart"></i>
+                            <svg id="heart-svg" viewBox="-19 -22 100 100" xmlns="http://www.w3.org/2000/svg">
+                                <g id="Group">
+                                    <g class="grp1" opacity="0" transform="translate(24 0)"><circle id="oval1" fill="#9FC7FA" cx="2.5" cy="3" r="5"/><circle id="oval2" fill="#9FC7FA" cx="7.5" cy="2" r="5"/></g>
+                                    <g class="grp1" opacity="0" transform="translate(44 6)"><circle id="oval3" fill="#CC8EF5" cx="5" cy="6" r="5"/><circle id="oval4" fill="#CC8EF5" cx="2" cy="2" r="5"/></g>
+                                    <g class="grp1" opacity="0" transform="translate(52 28)"><circle id="oval5" fill="#9CD8C3" cx="2" cy="7" r="5"/><circle id="oval6" fill="#8CE8C3" cx="4" cy="2" r="5"/></g>
+                                    <g class="grp1" opacity="0" transform="translate(35 50)"><circle id="oval7" fill="#F48EA7" cx="6" cy="5" r="5"/><circle id="oval8" fill="#F48EA7" cx="2" cy="2" r="5"/></g>
+                                    <g class="grp1" opacity="0" transform="translate(14 50)"><circle id="oval9" fill="#91D2FA" cx="6" cy="5" r="5"/><circle id="oval10" fill="#91D2FA" cx="2" cy="2" r="5"/></g>
+                                    <g class="grp1" opacity="0" transform="translate(0 28)"><circle id="oval11" fill="#CC8EF5" cx="2" cy="7" r="5"/><circle id="oval12" fill="#91D2FA" cx="3" cy="2" r="5"/></g>
+                                    <g class="grp1" opacity="0" transform="translate(7 6)"><circle id="oval13" fill="#9CD8C3" cx="2" cy="6" r="5"/><circle id="oval14" fill="#8CE8C3" cx="5" cy="2" r="5"/></g>
+                                </g>
+                            </svg>
+                        </div>&nbsp;<span></span>
+                    </button></div>
                 </div>
                 <div class="row">
                     <div class="col" style="margin-bottom: -10px;"><p style="font-size: 14px; color:#9e9e9e;"><span id="nickName" style="color: rgb(244, 116, 76);font-weight: bold;"></span> 님의 다른 인테리어 사진</p></div>
@@ -592,17 +607,7 @@
                 async: false,
                 success: function (likeCount) {
                     console.log(likeCount);
-                    let heart = '<div><i class="far fa-heart"></i>'
-                            + '<svg id="heart-svg" viewBox="-19 -17 100 100" xmlns="http://www.w3.org/2000/svg"><g id="Group">'
-                            + '<g class="grp1" opacity="0" transform="translate(24 0)"><circle id="oval1" fill="#9FC7FA" cx="2.5" cy="3" r="5"/><circle id="oval2" fill="#9FC7FA" cx="7.5" cy="2" r="5"/></g>'
-                            + '<g class="grp1" opacity="0" transform="translate(44 6)"><circle id="oval3" fill="#CC8EF5" cx="5" cy="6" r="5"/><circle id="oval4" fill="#CC8EF5" cx="2" cy="2" r="5"/></g>'
-                            + '<g class="grp1" opacity="0" transform="translate(52 28)"><circle id="oval5" fill="#9CD8C3" cx="2" cy="7" r="5"/><circle id="oval6" fill="#8CE8C3" cx="4" cy="2" r="5"/></g>'
-                            + '<g class="grp1" opacity="0" transform="translate(35 50)"><circle id="oval7" fill="#F48EA7" cx="6" cy="5" r="5"/><circle id="oval8" fill="#F48EA7" cx="2" cy="2" r="5"/></g>'
-                            + '<g class="grp1" opacity="0" transform="translate(14 50)"><circle id="oval9" fill="#91D2FA" cx="6" cy="5" r="5"/><circle id="oval10" fill="#91D2FA" cx="2" cy="2" r="5"/></g>'
-                            + '<g class="grp1" opacity="0" transform="translate(0 28)"><circle id="oval11" fill="#CC8EF5" cx="2" cy="7" r="5"/><circle id="oval12" fill="#91D2FA" cx="3" cy="2" r="5"/></g>'
-                            + '<g class="grp1" opacity="0" transform="translate(7 6)"><circle id="oval13" fill="#9CD8C3" cx="2" cy="6" r="5"/><circle id="oval14" fill="#8CE8C3" cx="5" cy="2" r="5"/></g>'
-                            + '</g></svg></div>'
-                    $('#likeBtn').html(heart + '&nbsp; ' + likeCount);
+                    $('#likeBtn span').html(likeCount);
                 },
                 error: function () {
                     alert('getCardLikeCount() error');
@@ -626,11 +631,10 @@
                     console.log(data);
                     existLike = data;
                     if (data == "exist") {
-                        // $('#likeBtn i').attr('style', "color: red; font-size: 18px;");
-                        $('#likeBtn i').toggleClass('fa').toggleClass('far');
+                        $('#likeBtn i').removeClass('far').addClass('fa');
                     }
                     else {
-
+                        $('#likeBtn i').removeClass('fa').addClass('far');
                     }
                 },
                 error: function () {
@@ -646,9 +650,9 @@
                 return;
             }
             
-            $(this).toggleClass('active');
             // 좋아요가 눌려있지 않았다면 좋아요 +1
             if (existLike != "exist") {
+                $(this).addClass('active');
                 $.ajax({
                     url: "http://192.168.0.231:3000/addCardLikeCount",
                     type: "get",
@@ -672,6 +676,7 @@
                 });
             }
             else {  //좋아요가 눌려있었다면 좋아요 -1 
+                $(this).removeClass('active');
                 $.ajax({
                     url: "http://192.168.0.231:3000/deleteCardLikeCount",
                     type: "get",
