--- a/view/login/login.html
+++ b/view/login/login.html
@@ -211,11 +211,11 @@
     // 명시적으로 value == 사용 
     // [], {} 도 빈값으로 처리 
     var isEmpty = function(value){ 
-    if( value == "" || value == null || value == undefined || ( value != null && typeof value == "object" && !Object.keys(value).length ) ){
-        return true
-        } else { 
-        return false 
-        } 
+        if( value == "" || value == null || value == undefined || ( value != null && typeof value == "object" && !Object.keys(value).length ) ){
+            return true
+            } else { 
+            return false 
+            } 
     }
 
     //파라미터값 가져오도록 하는 함수
@@ -327,11 +327,11 @@
     
  
 
-    function getCookie(name) {
-        const value = "; " + document.cookie;
-        const parts = value.split("; " + name + "=");
-        if (parts.length === 2) return parts.pop().split(";").shift();
-    }
+    // function getCookie(name) {
+    //     const value = "; " + document.cookie;
+    //     const parts = value.split("; " + name + "=");
+    //     if (parts.length === 2) return parts.pop().split(";").shift();
+    // }
     
    
 
