--- a/view/community/questionDetail.html
+++ b/view/community/questionDetail.html
@@ -439,7 +439,7 @@ $(document).ready(function(){
     let sessionId = JSON.parse(sessionStorage.getItem("login"));
     console.log(sessionId);
     
-    if(sessionId==null){
+    if(sessionId==null || sessionId.auth =="3"){
         $("#_replyinput").attr("src","http://localhost:3000/upload/wanza.png");
     }else{
         $("#_replyinput").attr("src","http://localhost:3000/upload/"+sessionId.profileName);
