--- a/view/admin/mainAdmin.html
+++ b/view/admin/mainAdmin.html
@@ -129,7 +129,7 @@ body{
     margin: 20px 50px;
     padding: 20px;
     border-radius: 5px;
-    background-color: #dee2e6f7;
+    background-color: white;
     justify-content: center;
     z-index: 2;
     color: white;
@@ -178,7 +178,6 @@ body{
     height: 300px;
     z-index: 10000;
 }
-
 </style>
 
 </head>
@@ -206,7 +205,7 @@ body{
 
                 <div class="box_wrap">
                     <div class="box_head">
-                        <i class="fas fa-scroll fa-2x"></i>
+                        &nbsp;&nbsp;<i class="fas fa-file-signature fa-2x"></i>
                     </div>
                     <div class="box_main">
                         <div class="box_content">
