--- a/view/admin/mainAdmin.html
+++ b/view/admin/mainAdmin.html
@@ -645,8 +645,8 @@ let yesterday = year+"-"+month+"-"+yesterdate;
                 $("#salesCompare").append("<input type='hidden' id='hiddenNum"+i+"' value='"+val.count+"'>");
             })
 
-            let ySales = $("#hiddenNum0").val();    // 어제 판매 갯수
-            let tSales =$("#hiddenNum1").val();     // 오늘 판매 갯수
+            let tSales = $("#hiddenNum0").val();    // 어제 판매 갯수
+            let ySales =$("#hiddenNum1").val();     // 오늘 판매 갯수
             if(tSales==undefined){
                 tSales=0;
             }
@@ -699,8 +699,8 @@ function salesPrice(){
                 $("#salesPrice").append("<input type='hidden' id='hiddenPrice"+i+"' value='"+val.count+"'>");
             })
 
-            let ySalesPrice = $("#hiddenPrice0").val();    // 어제 판매 갯수
-            let tSalesPrice =$("#hiddenPrice1").val();     // 오늘 판매 갯수
+            let tSalesPrice = $("#hiddenPrice0").val();    // 오늘 판매 갯수
+            let ySalesPrice =$("#hiddenPrice1").val();     // 어제 판매 갯수
 
             if(tSalesPrice==undefined){
                 tSalesPrice=0;
