--- a/view/community/questionWrite.html
+++ b/view/community/questionWrite.html
@@ -127,7 +127,7 @@
 
                   <div id="question-form-header" style="font-size: 20px; text-align: right; width: auto;">
                       <h1 style="text-align: center; margin-top: 30px; margin-bottom: 15px; font-weight: 800;">질문하기</h1>
-                      <span style="font-weight: 800;">"상품구매, 배송관련" 질문은 <a href="" style="color: coral;">이곳에 문의하러 가기</a></span>
+                      <span style="font-weight: 800;">"상품구매, 배송관련" 질문은 <a href="../store/mainStore.html" style="color: coral;">이곳에 문의하러 가기</a></span>
                   </div>
                   
                   <input class="question-title" name="questionTitle" id="questionTitle" type="text" placeholder="질문의 제목을 적어주세요" 
