--- a/view/myPage/mainMyPage.html
+++ b/view/myPage/mainMyPage.html
@@ -880,21 +880,21 @@ function setStoryLength(str) {
     if(len>130){ return str.substr(0,130); }
     else{        return str }
 };
-//쿠키 저장하기
-let setCookie = function(name, value, exp) {
-    let date = new Date();
-    date.setTime(date.getTime() + exp*24*60*60*1000);
-    document.cookie = name + '=' + value + ';expires=' + date.toUTCString() + ';path=/';
-};
-//쿠키 가져오기
-let getCookie = function(name) {
-    let value = document.cookie.match('(^|;) ?' + name + '=([^;]*)(;|$)');
-    return value? value[2] : null;
-};
-//쿠키 삭제하기
-let deleteCookie = function(name) {
-    document.cookie = name + '=; expires=Thu, 01 Jan 1999 00:00:10 GMT;';
-}
+// //쿠키 저장하기
+// let setCookie = function(name, value, exp) {
+//     let date = new Date();
+//     date.setTime(date.getTime() + exp*24*60*60*1000);
+//     document.cookie = name + '=' + value + ';expires=' + date.toUTCString() + ';path=/';
+// };
+// //쿠키 가져오기
+// let getCookie = function(name) {
+//     let value = document.cookie.match('(^|;) ?' + name + '=([^;]*)(;|$)');
+//     return value? value[2] : null;
+// };
+// //쿠키 삭제하기
+// let deleteCookie = function(name) {
+//     document.cookie = name + '=; expires=Thu, 01 Jan 1999 00:00:10 GMT;';
+// }
 </script>
 
 </html>
